--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -432,7 +432,7 @@
      .ingredients,
      .steps {
          width: 75%;
-        
+
      }
 
      .steps {
@@ -440,7 +440,8 @@
          margin-left: 0;
      }
 
-     .commentfield, .addcommentfield{
+     .commentfield,
+     .addcommentfield {
          width: 95%;
          height: fit-content;
          min-height: 150px;
@@ -452,11 +453,12 @@
          height: 200px;
      }
 
-     .comment ,.addcomment{
-        min-height: 100px;
-        min-width: 350px;
+     .comment,
+     .addcomment {
+         min-height: 100px;
+         min-width: 350px;
      }
-     
+
 
  }
 
@@ -538,13 +540,14 @@
      border-top-right-radius: 20px;
      border-bottom-left-radius: 20px;
      border-bottom-right-radius: 20px;
-
+     min-height: 20vh;
+     height: fit-content;
  }
 
  .ingredients_input,
  .steps_input {
 
-     height: 20vw;
+     height: 50%;
  }
 
  .submit_button {
@@ -561,6 +564,33 @@
  .submit_button:hover {
 
      background: linear-gradient(120deg, var(--background2), var(--background1));
+ }
+
+ @media only screen and (max-width: 850px) {
+
+     .guidelines {
+         display: flex;
+         flex-direction: column;
+         gap: 10px;
+     }
+
+     .guidelines{
+        
+        width: 100%;
+     }
+     .add_ingredients,
+     .add_steps{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%
+     }
+     .add_image{
+        width: 95%;
+        height: 100%;
+        min-width: 375px;
+        min-height: 250px;
+     }
  }
 
 
