--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,5 +1,6 @@
  /*Eetu Rouhiainen 12.12*/
 
+ /*We have all colors used for our website in root*/
  :root {
      --background1: #0E131F;
      --background2: #FF0035;
@@ -16,12 +17,13 @@
      --whiteish: rgb(228, 203, 203);
      --crayola: #F6EFEE;
  }
-
+/*Border box for grid and flexbox and we use same font everywhere beacuse we are lazy*/
  * {
      box-sizing: border-box;
      font-family: 'Roboto Slab';
  }
 
+ /*Get rid of padding and margin everywhere*/
  html,
  body {
      margin: 0px;
@@ -29,6 +31,7 @@
 
  }
 
+ /*We use linear-gradient for nice effect on the background*/
  body {
      background: linear-gradient(120deg, var(--background1), var(--background2));
      height: fit-content;
@@ -60,7 +63,7 @@
      border: none;
  }
 
-
+/*Has position relative so dropdown-content will always be at the same spot since it has absolute*/
  .dropdown {
      position: relative;
      display: inline-block;
@@ -87,8 +90,9 @@
      display: block;
  }
 
-
+/*Ease adds a nice transition effect*/
  .dropdown-content a:hover {
+     transition: 500ms ease;
      background-color: var(--background2);
      color: var(--border);
  }
@@ -99,8 +103,8 @@
  }
 
 
- /* Login and Signup CSS */
-
+ /* Login and Signup page CSS */
+/*Width is here only 400px since that is the width of display our website supports*/
  .logincenter {
      background: linear-gradient(120deg, var(--darkred), var(--crayola));
      position: absolute;
@@ -146,11 +150,12 @@
      padding: 5em;
  }
 
- form {
+ .search {
+     display: flex;
      width: 70%;
  }
 
- form.search input[type=text] {
+ .search input[type=text] {
      padding: 10px;
      font-size: 17px;
      border: 1px solid var(--black);
@@ -158,7 +163,7 @@
      background: var(--white);
  }
 
- form.search input[type=text] {
+ .search input[type=text] {
      padding: 10px;
      font-size: 17px;
      border: 1px solid var(--black);
@@ -167,7 +172,7 @@
      background: var(--white);
  }
 
- form.search button {
+ .search button {
      float: left;
      min-width: 5%;
      padding: 10px;
@@ -179,8 +184,8 @@
      cursor: pointer;
  }
 
- form.search button:hover {
-
+ .search button:hover {
+    transition: 500ms ease;
      background: var(--background2);
      color: var(--background1);
  }
@@ -268,6 +273,25 @@
 
      }
 
+     .search {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 97%;
+    }
+
+    .search button {
+        min-width: 50px;
+        max-width: 50px;
+    }
+
+    .search input{
+        width: 100%;
+    }
+
+    .searchdiv{
+        padding: 0;
+    }
  }
 
  /* Recipe page css starts here */
