--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -537,8 +537,8 @@
 
  .add_image {
 
-     min-width: 600px;
-     min-height: 325px;
+     width: 600px;
+     height: 325px;
      background-color: var(--black);
      border: 5px solid var(--border);
  }
@@ -549,10 +549,11 @@
  }
 
 
- #image {
+ .output {
+     max-width: 100%;
+     max-height: 100%;
      width: 100%;
      height: 100%;
-
  }
 
  .add_name {
