--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -537,16 +537,24 @@
 
  .add_image {
 
-     min-width: 600px;
-     min-height: 325px;
-     background-color: var(--black);
-     border: 5px solid var(--border);
- }
+    width: 600px;
+    height: 325px;
+    background-color: var(--black);
+    border: 5px solid var(--border);
+}
 
- .class {
-     margin: 0;
-     padding: 0;
- }
+.class {
+    margin: 0;
+    padding: 0;
+}
+
+
+.output {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+}
 
 
  #image {
